--- a/login.html
+++ b/login.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Git Test</title>
+	<title>Login</title>
 </head>
 <body>
-This is only a Test
-some text
+Login page
 </body>
 </html>
